force-app/main/default/objects/MUSW__Fee__c/fields/CVRD_DS_Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Additional_Fees__c</fullName>
    <label>Additional Fees</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee per New Parcel or New Dwelling Unit</fullName>
            </value>
            <value>
                <fullName>New Unit(s) Sewer Utility Fee</fullName>
            </value>
            <value>
                <fullName>New Unit(s) Water Utility Fee</fullName>
            </value>
            <value>
                <fullName>Rezoned to Commercial or Industrial Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>