force-app/main/default/objects/MUSW__Fee__c/fields/CVRD_DS_Application_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Sub_Type__c</fullName>
    <label>Application Sub Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>