force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <description>The type of fee. Each type may have a different accounting code.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File Opening Fee</fullName>
            </value>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>Administrative Fee</fullName>
            </value>
            <value>
                <fullName>Advertising Fee</fullName>
            </value>
            <value>
                <fullName>Additional Fee</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>